--- a/Alzy/app/src/main/res/layout/activity_altera_email.xml
+++ b/Alzy/app/src/main/res/layout/activity_altera_email.xml
@@ -53,41 +53,41 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout4"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:background="@color/gra_ligh"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
-        app:layout_constraintVertical_bias="1.0">
+            android:id="@+id/linearLayout4"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:background="@mipmap/back_padrao"
+            android:orientation="vertical"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout14"
+            app:layout_constraintVertical_bias="1.0">
 
         <ImageView
-            android:id="@+id/imageView7"
-            android:layout_width="match_parent"
-            android:layout_height="64dp"
-            app:srcCompat="@mipmap/ic_carteira"
-            tools:layout_editor_absoluteX="181dp"
-            tools:layout_editor_absoluteY="632dp" />
+                android:id="@+id/imageView7"
+                android:layout_width="match_parent"
+                android:layout_height="64dp"
+                app:srcCompat="@mipmap/ic_carteira"
+                tools:layout_editor_absoluteX="181dp"
+                tools:layout_editor_absoluteY="632dp"/>
     </LinearLayout>
 
     <com.github.clans.fab.FloatingActionButton
-        android:id="@+id/fb_voltar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDarkDefault"
-        android:onClick="sair"
-        android:src="@drawable/ic_baseline_arrow_back_ios_24"
-        app:fab_colorNormal="@color/colorPrimaryDarkDefault"
-        app:fab_label="Configurações"
-        app:fab_size="normal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.002"
-        app:layout_constraintStart_toStartOf="parent"></com.github.clans.fab.FloatingActionButton>
+            android:id="@+id/fb_voltar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/back_padrao"
+            android:onClick="sair"
+            android:src="@drawable/ic_baseline_arrow_back_ios_24"
+            app:fab_colorNormal="@color/colorPrimaryDarkDefault"
+            app:fab_label="Configurações"
+            app:fab_size="normal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.002"
+            app:layout_constraintStart_toStartOf="parent"></com.github.clans.fab.FloatingActionButton>
 
     <LinearLayout
         android:id="@+id/linearLayout14"
