--- a/Alzy/app/src/main/res/layout/activity_cadastro.xml
+++ b/Alzy/app/src/main/res/layout/activity_cadastro.xml
@@ -1,166 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="0dp"
-    tools:context=".activity.CadastroActivity">
+                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
+                                                   xmlns:tools="http://schemas.android.com/tools"
+                                                   android:layout_width="match_parent"
+                                                   android:layout_height="match_parent"
+                                                   android:padding="0dp"
+                                                   tools:context=".activity.CadastroActivity"
+                                                   android:background="@mipmap/bac_fund">
 
     <LinearLayout
-        android:id="@+id/linearLayout2"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_margin="0dp"
-        android:background="@color/colorPrimaryDefault"
-        android:orientation="horizontal"
-        android:padding="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+            android:id="@+id/linearLayout8"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="@string/cadastrar_se"
-            android:textAlignment="center"
-            android:textColor="@color/whiteColorAux"
-            android:textSize="18sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout8"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
-        app:layout_constraintVertical_bias="0.334">
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:orientation="vertical"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
 
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editNomeCadastro"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginBottom="10dp"
-            android:background="@mipmap/back_input"
-            android:drawableRight="@drawable/ic_baseline_person_24"
-            android:hint="Nome"
-            android:inputType="textPersonName|textCapSentences"
-            android:padding="10dp"
-            android:textAlignment="center" />
-
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/editEmailCadastro"
-            android:layout_width="match_parent"
-            android:layout_height="70dp"
-            android:layout_marginBottom="10dp"
-            android:background="@mipmap/back_input"
-            android:drawableRight="@drawable/ic_baseline_email_24"
-            android:hint="E-mail"
-            android:inputType="textWebEmailAddress"
-            android:padding="10dp"
-            android:textAlignment="center" />
-
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:hintEnabled="false"
-            app:passwordToggleEnabled="true"
-            app:passwordToggleTint="@color/colorPrimaryDarkDefault">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/editSenhaCadastro"
+                android:id="@+id/editNomeCadastro"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginBottom="10dp"
                 android:background="@mipmap/back_input"
-                android:drawableLeft="@drawable/ic_baseline_lock_24"
-                android:hint="Senha"
-                android:inputType="textPassword"
+                android:drawableRight="@drawable/ic_baseline_person_24"
+                android:hint="Nome"
+                android:inputType="textPersonName|textCapSentences"
                 android:padding="10dp"
-                android:textAlignment="center" />
+                android:textAlignment="center"/>
+
+
+        <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/editEmailCadastro"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginBottom="10dp"
+                android:background="@mipmap/back_input"
+                android:drawableRight="@drawable/ic_baseline_email_24"
+                android:hint="E-mail"
+                android:inputType="textWebEmailAddress"
+                android:padding="10dp"
+                android:textAlignment="center"/>
+
+
+        <com.google.android.material.textfield.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:hintEnabled="false"
+                app:passwordToggleEnabled="true"
+                app:passwordToggleTint="@color/colorPrimaryDarkDefault">
+
+            <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/editSenhaCadastro"
+                    android:layout_width="match_parent"
+                    android:layout_height="70dp"
+                    android:layout_marginBottom="10dp"
+                    android:background="@mipmap/back_input"
+                    android:drawableLeft="@drawable/ic_baseline_lock_24"
+                    android:hint="    Senha"
+                    android:inputType="textPassword"
+                    android:padding="10dp"
+                    android:textAlignment="center"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/buttonCadastrar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDefault"
-            android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
-            android:gravity="center"
-            android:onClick="validarECadastrarUsuario"
-            android:text="@string/cadastrar_se"
-            android:textAlignment="center"
-            android:textColor="@color/whiteColorAux"
-            tools:layout_editor_absoluteX="54dp"
-            tools:layout_editor_absoluteY="389dp" />
+                android:id="@+id/buttonCadastrar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorPrimaryDefault"
+                android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
+                android:gravity="center"
+                android:onClick="validarECadastrarUsuario"
+                android:text="@string/cadastrar_se"
+                android:textAlignment="center"
+                android:textColor="@color/whiteColorAux"
+                tools:layout_editor_absoluteX="54dp"
+                tools:layout_editor_absoluteY="389dp"/>
 
         <TextView
-            android:id="@+id/textView9"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:gravity="center"
-            android:onClick="irTelaLogin"
-            android:text="@string/j_fiz_uma_conta"
-            android:textAlignment="center"
-            android:textColor="#3F51B5"
-            tools:layout_editor_absoluteX="154dp"
-            tools:layout_editor_absoluteY="459dp" />
+                android:id="@+id/textView9"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:gravity="center"
+                android:onClick="irTelaLogin"
+                android:text="@string/j_fiz_uma_conta"
+                android:textAlignment="center"
+                android:textColor="#3F51B5"
+                tools:layout_editor_absoluteX="154dp"
+                tools:layout_editor_absoluteY="459dp"/>
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/linearLayout7Bottom"
-        android:layout_width="78dp"
-        android:layout_height="88dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
-        android:orientation="vertical"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
-        app:layout_constraintVertical_bias="1.0">
+            android:id="@+id/linearLayout7Bottom"
+            android:layout_width="78dp"
+            android:layout_height="88dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:orientation="vertical"
+            android:padding="5dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
+            app:layout_constraintVertical_bias="1.0">
 
         <ImageView
-            android:id="@+id/imageView6"
-            android:layout_width="57dp"
-            android:layout_height="49dp"
-            android:layout_gravity="center"
-            app:srcCompat="@mipmap/ic_carteira" />
+                android:id="@+id/imageView6"
+                android:layout_width="57dp"
+                android:layout_height="49dp"
+                android:layout_gravity="center"
+                app:srcCompat="@mipmap/ic_carteira"/>
 
         <TextView
-            android:id="@+id/textView16"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:text="@string/versao"
-            android:textAlignment="center"
-            android:textSize="12sp" />
+                android:id="@+id/textView16"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:text="@string/versao"
+                android:textAlignment="center"
+                android:textSize="12sp"/>
     </LinearLayout>
 
     <ProgressBar
-        android:id="@+id/progressBarCircularCadastro"
-        style="?android:attr/progressBarStyle"
-        android:layout_width="245dp"
-        android:layout_height="245dp"
-        android:background="@mipmap/backp_rogress"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+            android:id="@+id/progressBarCircularCadastro"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="245dp"
+            android:layout_height="245dp"
+            android:background="@mipmap/backp_rogress"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.498"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
