--- a/Alzy/app/src/main/res/layout/activity_categorias.xml
+++ b/Alzy/app/src/main/res/layout/activity_categorias.xml
@@ -45,51 +45,51 @@
     </LinearLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/linearLayout17"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/gra_ligh"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+            android:id="@+id/linearLayout17"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:background="@mipmap/back_padrao"
+            android:orientation="horizontal"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
         <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="wrap_content"
-            android:layout_height="64dp"
-            android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.498"
-            app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@mipmap/ic_carteira" />
+                android:id="@+id/imageView12"
+                android:layout_width="wrap_content"
+                android:layout_height="64dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.498"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@mipmap/ic_carteira"/>
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/fb_voltar"
-            android:layout_width="85dp"
-            android:layout_height="90dp"
-            android:background="@color/colorPrimaryDarkDefault"
-            android:onClick="sair"
-            android:src="@drawable/ic_baseline_arrow_back_ios_24"
-            app:fab_colorNormal="@color/colorPrimaryDefault"
-            app:fab_label="Configurações"
-            app:fab_size="normal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+                android:id="@+id/fb_voltar"
+                android:layout_width="85dp"
+                android:layout_height="90dp"
+                android:background="@color/colorPrimaryDarkDefault"
+                android:onClick="sair"
+                android:src="@drawable/ic_baseline_arrow_back_ios_24"
+                app:fab_colorNormal="@color/colorPrimaryDefault"
+                app:fab_label="Configurações"
+                app:fab_size="normal"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
 
         <com.github.clans.fab.FloatingActionButton
-            android:id="@+id/fb_adicionar"
-            android:layout_width="85dp"
-            android:layout_height="90dp"
-            android:background="@color/colorPrimaryDarkDefault"
-            android:onClick="irTelaAdcionarCategoria"
-            android:src="@drawable/ic_baseline_add_circle_24"
-            app:fab_colorNormal="@color/colorPrimaryDefault"
-            app:fab_label="Configurações"
-            app:fab_size="normal"
+                android:id="@+id/fb_adicionar"
+                android:layout_width="85dp"
+                android:layout_height="90dp"
+                android:background="@color/colorPrimaryDarkDefault"
+                android:onClick="irTelaAdcionarCategoria"
+                android:src="@drawable/ic_baseline_add_circle_24"
+                app:fab_colorNormal="@color/colorPrimaryDefault"
+                app:fab_label="Configurações"
+                app:fab_size="normal"
 
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
